Update tableau style

--- a/index.html
+++ b/index.html
@@ -50,7 +50,23 @@
             </section>
             <!-- content-7  -->
             <section id ="section2">
-                            <div class='tableauPlaceholder' id='viz1536686937935' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Se&#47;Self-developmenttoolkits&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Self-developmenttoolkits&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Se&#47;Self-developmenttoolkits&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>             
+                            <div class='tableauPlaceholder' id='viz1536686937935' style='position: relative'>
+                            	<noscript>
+                            		<a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Se&#47;Self-developmenttoolkits&#47;Dashboard1&#47;1_rss.png' style='border: none' />
+                            		</a>
+                            	</noscript>
+                            	<object class='tableauViz'  style='display:none;'>
+                            		<param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                            		<param name='embed_code_version' value='3' />
+                            		<param name='site_root' value='' />
+                            		<param name='name' value='Self-developmenttoolkits&#47;Dashboard1' />
+                            		<param name='tabs' value='no' /><param name='toolbar' value='yes' />
+                            		<param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Se&#47;Self-developmenttoolkits&#47;Dashboard1&#47;1.png' /> 
+                            		<param name='animate_transition' value='yes' />
+                            		<param name='display_static_image' value='yes' />
+                            		<param name='display_spinner' value='yes' />
+                            		<param name='display_overlay' value='yes' />
+                            		<param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>             
             </section>
 
             <!-- content-23  -->
@@ -178,6 +194,13 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="Developer/samples/sample-04/js/jquery.backgroundvideo.min.js"></script>
         <script src="Developer/samples/sample-04/js/script.js"></script>
-        <script type='text/javascript'>                    var divElement = document.getElementById('viz1536686937935');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.5)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+        <script type='text/javascript'>                    
+        var divElement = document.getElementById('viz1536686937935');                    
+    	var vizElement = divElement.getElementsByTagName('object')[0];                    
+    	vizElement.style.width='100%';
+    	vizElement.style.height=(divElement.offsetWidth*0.5)+'px';
+    	if ($(window).width() < 767) {vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*1.5)+'px';}
+
+    	var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
         <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us19.list-manage.com","uuid":"196276fe57cf1dc27cd454d7c","lid":"82978b5514","uniqueMethods":true}) })</script>
 </html>
