--- a/About.html
+++ b/About.html
@@ -16,7 +16,7 @@
     </head>
 
     <body>
-        <div class="page-wrapper">
+        
             <!-- header-10 -->
             <header class="header-10">
                 <div class="container">
@@ -39,11 +39,12 @@
                     </div>
                 </div>
             </header>                   
-    </body>  
-   
+ 
+<div style="margin-top:30px">  
  <div class='tableauPlaceholder' id='viz1543135773804' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Le&#47;LeHongNhung-CV&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='LeHongNhung-CV&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Le&#47;LeHongNhung-CV&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>               
 
-
+</div>
+</body>
  		
 
 
