--- a/Tools.html
+++ b/Tools.html
@@ -18,7 +18,7 @@
 
     </head>
     <body>
-        <div class="page-wrapper">
+        
             <!-- header-10 -->
             <header class="header-10">
                 <div class="container">
@@ -41,12 +41,14 @@
                     </div>
                 </div>
             </header>
+            <div style="margin-top:30px">
 
-<paper-card elevation="2" aria-label="">
-    <awesome-table id="view" class="card-content">
-                <div data-type="AwesomeTableView" data-viewID="-LQKDvV3aieeB7CqGOnr"></div>
-    </awesome-table>            
-</paper-card>
+                <paper-card elevation="2" aria-label="">
+                    <awesome-table id="view" class="card-content">
+                                <div data-type="AwesomeTableView" data-viewID="-LQKDvV3aieeB7CqGOnr"></div>
+                    </awesome-table>            
+                </paper-card>
+            </div>
 
         <script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
         <script src="Developer/common-files/js/jquery-1.10.2.min.js"></script>
