--- a/index-VI.html
+++ b/index-VI.html
@@ -16,7 +16,7 @@
     </head>
 
     <body>
-        <div class="page-wrapper">
+        
             <!-- header-10 -->
             <header class="header-10">
                 <div class="container">
@@ -39,6 +39,8 @@
                     </div>
                 </div>
             </header>
+
+    <div style="margin-top:30px">
             <section class="header-10-sub v-center bg-midnight-blue">
                 <div class="background">
                 <img src="img/My Logo Transp.png" style="background-size:contain; height:auto; z-index:1; margin-top:5em; ; background-color: #670a0a;" alt="">
@@ -141,7 +143,7 @@
                     <a class="btn btn-large btn-danger" href="Tools-VI.html">KHÁM PHÁ </a>
                 </div>
             </section>
-
+</div>
             <!-- footer-3 -->
             <footer class="footer-3">
                 <div class="container">
@@ -163,7 +165,7 @@
                     </div>
                 </div>
             </footer>
-        </div>
+
 
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="Developer/common-files/js/jquery-1.10.2.min.js"></script>
