--- a/About.html
+++ b/About.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
+<html lang="en" class="js touch cssanimations csstransitions loaded"><head>
          <meta charset="utf-8">
         <title>Nhung </title>
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <link rel="shortcut icon" href="Developer/flat-ui/images/favicon.ico">
         <link rel="stylesheet" href="Developer/flat-ui/bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="Developer/flat-ui/css/flat-ui.css">
@@ -15,7 +13,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
 
-    <body>
+    <body style="">
         
             <!-- header-10 -->
             <header class="header-10">
@@ -28,7 +26,7 @@
                             <div class="collapse navbar-collapse pull-right">
                                 <ul class="nav pull-left">
                                     <li class="active"><a href="index.html">Home</a></li>
-                                    <li class = "nav-visible"><a href="About.html">About</a></li>
+                                    <li class="nav-visible"><a href="About.html">About</a></li>
                                     <li><a href="Tools.html">Tools</a></li>
                                     <li><a href="Tutorials.html">Tutorials</a></li>
                                 </ul>
@@ -40,11 +38,11 @@
                 </div>
             </header>                   
  
-<div style="margin-top:80px">  
- <div class='tableauPlaceholder' id='viz1543135773804' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Le&#47;LeHongNhung-CV&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='LeHongNhung-CV&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Le&#47;LeHongNhung-CV&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>               
+<div style="width: 80%;text-align: center;margin-top: 80px;margin-left: auto;">  
+ <div class="tableauPlaceholder" id="viz1543135773804" style="position: relative; width: 100%; height: 1412.25px; overflow: hidden; display: block;"><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Le&#47;LeHongNhung-CV&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><script src="https://public.tableau.com/javascripts/api/viz_v1.js"></script><iframe frameborder="0" marginheight="0" marginwidth="0" title="Data Visualization" allowtransparency="true" allowfullscreen="true" class="tableauViz" style="display: block; width: 100%; height: 1412.25px; margin: 0px; padding: 0px; border: none;" src="https://public.tableau.com/views/LeHongNhung-CV/Dashboard1?:embed=y&amp;:showVizHome=no&amp;:host_url=https%3A%2F%2Fpublic.tableau.com%2F&amp;:embed_code_version=3&amp;:tabs=no&amp;:toolbar=yes&amp;:animate_transition=yes&amp;:display_static_image=no&amp;:display_spinner=no&amp;:display_overlay=yes&amp;:display_count=yes&amp;:loadOrderID=0"></iframe></div>               
 
 </div>
-</body>
+
  		
 
 
@@ -59,7 +57,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="Developer/samples/sample-04/js/jquery.backgroundvideo.min.js"></script>
         <script src="Developer/samples/sample-04/js/script.js"></script>
-        <script type='text/javascript'>                    
+        <script type="text/javascript">                    
  		var divElement = document.getElementById('viz1543135773804');                    
  		var vizElement = divElement.getElementsByTagName('object')[0];
 
@@ -68,4 +66,14 @@
  		var scriptElement = document.createElement('script');                    
  		scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
  		vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-</html>
+<div class="collapse navbar-collapse pull-right" id="header-10" style="z-index: 1;">
+                                <ul class="nav pull-left">
+                                    <li class="active"><a href="index.html">Home</a></li>
+                                    <li class="nav-visible"><a href="About.html">About</a></li>
+                                    <li><a href="Tools.html">Tools</a></li>
+                                    <li><a href="Tutorials.html">Tutorials</a></li>
+                                </ul>
+                                <form class="navbar-form pull-right">
+                                    <a class="btn btn-info" href="About-VI.html">VIE</a>
+                                </form>
+                            </div></body></html>
