--- a/About.html
+++ b/About.html
@@ -1,4 +1,4 @@
-<html lang="en" class="js touch cssanimations csstransitions loaded"><head>
+<html lang="en" class="js touch cssanimations csstransitions loaded js no-touch cssanimations csstransitions"><head>
          <meta charset="utf-8">
         <title>Nhung </title>
         <meta name="apple-mobile-web-app-capable" content="yes">
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="Developer/common-files/css/icon-font.css">
         <!-- end -->
         <link rel="stylesheet" href="css/style.css">
-    </head>
+    <script type="text/javascript" src="//mc.us19.list-manage.com/subscribe/form-settings?u=196276fe57cf1dc27cd454d7c&amp;id=82978b5514&amp;u=196276fe57cf1dc27cd454d7c&amp;id=82978b5514&amp;c=dojo_request_script_callbacks.dojo_request_script0" id="dojo_request_script0" async="" charset="utf-8"></script></head>
 
     <body style="">
         
@@ -38,7 +38,7 @@
                 </div>
             </header>                   
  
-<div style="width: 80%;text-align: center;margin-top: 80px;margin-left: auto;">  
+<div style="width: 90%;text-align: center;margin-top: 80px;margin-left: auto;margin-right: auto;">  
  <div class="tableauPlaceholder" id="viz1543135773804" style="position: relative; width: 100%; height: 1412.25px; overflow: hidden; display: block;"><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Le&#47;LeHongNhung-CV&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><script src="https://public.tableau.com/javascripts/api/viz_v1.js"></script><iframe frameborder="0" marginheight="0" marginwidth="0" title="Data Visualization" allowtransparency="true" allowfullscreen="true" class="tableauViz" style="display: block; width: 100%; height: 1412.25px; margin: 0px; padding: 0px; border: none;" src="https://public.tableau.com/views/LeHongNhung-CV/Dashboard1?:embed=y&amp;:showVizHome=no&amp;:host_url=https%3A%2F%2Fpublic.tableau.com%2F&amp;:embed_code_version=3&amp;:tabs=no&amp;:toolbar=yes&amp;:animate_transition=yes&amp;:display_static_image=no&amp;:display_spinner=no&amp;:display_overlay=yes&amp;:display_count=yes&amp;:loadOrderID=0"></iframe></div>               
 
 </div>
@@ -76,4 +76,30 @@
                                 <form class="navbar-form pull-right">
                                     <a class="btn btn-info" href="About-VI.html">VIE</a>
                                 </form>
-                            </div></body></html>
+                            </div><div class="collapse navbar-collapse pull-right" id="header-10" style="z-index: 1;">
+                                <ul class="nav pull-left">
+                                    <li class="active"><a href="index.html">Home</a></li>
+                                    <li class="nav-visible"><a href="About.html">About</a></li>
+                                    <li><a href="Tools.html">Tools</a></li>
+                                    <li><a href="Tutorials.html">Tutorials</a></li>
+                                </ul>
+                                <form class="navbar-form pull-right">
+                                    <a class="btn btn-info" href="About-VI.html">VIE</a>
+                                </form>
+                            </div><script>mendeleyWebImporter = {
+  downloadPdfs(t,e) { return this._call('downloadPdfs', [t,e]); },
+  open() { return this._call('open', []); },
+  setLoginToken(t) { return this._call('setLoginToken', [t]); },
+  _call(methodName, methodArgs) {
+    const id = Math.random();
+    window.postMessage({ id, token: '0.4829647493130982', methodName, methodArgs }, 'https://nhungleh.com');
+    return new Promise(resolve => {
+      const listener = window.addEventListener('message', event => {
+        const data = event.data;
+        if (typeof data !== 'object' || !('result' in data) || data.id !== id) return;
+        window.removeEventListener('message', listener);
+        resolve(data.result);
+      });
+    });
+  }
+};</script></body></html>
