New-look-my-portfolio

--- a/Data.html
+++ b/Data.html
@@ -13,8 +13,7 @@
         <link rel="stylesheet" href="Developer/common-files/css/icon-font.css">
         <!-- end -->
         <link rel="stylesheet" href="css/style.css" type='text/css' media='all' />
-        <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-        <link rel='stylesheet' id='all-css-2-1' href="Documents/GitHub/NhungLe/css/style.css" type='text/css' media='all' />
+        <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">      
 
     </head>
     <body>
@@ -29,12 +28,12 @@
                          </div>
                             <div class="collapse navbar-collapse pull-right">
                                 <ul class="nav pull-left">
-	                                <li class="active"><a href="index.html">About</a></li>
+                                    <li class="active"><a href="index.html">About</a></li>
 	                                <li class = "nav-visible"><a href="Tools.html">Solutions</a></li>
 	                                <li><a href="Data.html">Data</a></li>
                                     <li><a href="Publications.html">Publications</a></li>
                                     <li><a href="Tutorials.html">Blog</a></li>
-	                            </ul>
+                                </ul>
                                 <form class="navbar-form pull-right">
                                     <a class="btn btn-info" href="Tools-VI.html">VIE</a>
                                 </form>
@@ -42,20 +41,20 @@
                     </div>
                 </div>
             </header>
-        
-        <!--Main Section-->
-        <div class="at-layout-vertical at-layout-container" style="margin-top:80px">
+        <!--main section-->
+        <div class="at-layout-vertical at-layout-container" style="padding-top:20px">
+            <blockquote style="padding-top:3em">There are some data vizs based on my consultancy works and research interests. For requesting datasets, please contact directly with me via email: nhung168@gmail.com</blockquote>
             <div class= "at-table-fix awesome-card">
                 <div class="awesome-card container">
                     <div class="awesome-card paper-card">    
                         <div class="card-content">
                             <div class="paper-container">
-                                <a class="layer1" href="/Tools/Post3-En.html" target="_blank">
-                                    <img src="/img/maxresdefault.jpg">
+                                <a class="layer1" href="/Data/Post1-En.html" target="_blank">
+                                    <img src="/img/Ivory Trade.png">
                                 </a>
                                 <div class="layer2 layer2-onload">
-                                    <h6 style="text-align: center;"><a href="/Tools/Post3-En.html" target="_blank">Project Management tool</a></h6>
-                                    <p class="description">Introduce Awesome Table and Apply into displaying and tracking activity report</p>
+                                    <h6 style="text-align: center;"><a href="/Data/Post1-En.html" target="_blank">Wildlife Trade Cases in Vietnam 2018</a></h6>
+                                    <p class="description">An outlook of the wildlife trade issues in Vietnam 2018 reported by news</p>
                                 </div>
                             </div>
                         </div>
@@ -63,12 +62,12 @@
                     <div class="awesome-card paper-card">    
                         <div class="card-content">
                             <div class="paper-container">
-                                <a class="layer1" href="/Tools/Post1-En.html" target="_blank">
-                                    <img src="/img/ezgif.com-video-to-gif.gif">
+                                <a class="layer1" href="/Data/Post2-En.html" target="_blank">
+                                    <img src="/img/Mekong Delta.png">
                                 </a>
                                 <div class="layer2 layer2-onload">
-                                    <h6 style="text-align: center;"><a href="/Tools/Post1-En.html" target="_blank">Sale Management Tool</a></h6>
-                                    <p class="description">Manage sale performance through purchasing and selling records, receipts and inventory</p>
+                                    <h6 style="text-align: center;"><a href="/Data/Post2-En.html" target="_blank">Mekong Delta Socio-Economic Database 2019</a></h6>
+                                    <p class="description">A dataset (Demographics,agriculture,health,water) extracted from 13 provincial stastical yearbooks </p>
                                 </div>
                             </div>
                         </div>
@@ -76,12 +75,12 @@
                     <div class="awesome-card paper-card">    
                         <div class="card-content">
                             <div class="paper-container">
-                                <a class="layer1" href="/Tools/Post2-En.html" target="_blank">
-                                    <img src="/img/UpdatedEmailNoti.gif">
+                                <a class="layer1" href="/Data/Post3-En.html" target="_blank">
+                                    <img src="/img/Lockdown-article.png">
                                 </a>
                                 <div class="layer2 layer2-onload">
-                                    <h6 style="text-align: center;"><a href="/Tools/Post2-En.html" target="_blank">Online Sale Management Tool</a></h6>
-                                    <p class="description">An onlinve version with updated functions for collaborating with partners</p>
+                                    <h6 style="text-align: center;"><a href="/Data/Post3-En.html" target="_blank">Hanoi Air Quality in the social distancing period 2020</a></h6>
+                                    <p class="description">We conducted a study for understanding data quality in Hanoi under the social distancing measures.</p>
                                 </div>
                             </div>
                         </div>
@@ -121,18 +120,19 @@
         </footer>
 
         <script>
-        function layer(){
-            setTimeout(function(){
-            var buttons = document.getElementsByClassName("layer2"),
-                len = buttons != null ? buttons.length : 0,
-                i = 0;
-            for(i; i < len; i++){
-                buttons[i].classList.remove("layer2-onload"); 
-            }
-            }, 2000);
-         };
-         layer();
-        </script>
+            function layer(){
+                setTimeout(function(){
+                var buttons = document.getElementsByClassName("layer2"),
+                    len = buttons != null ? buttons.length : 0,
+                    i = 0;
+                for(i; i < len; i++){
+                    buttons[i].classList.remove("layer2-onload"); 
+                }
+                }, 2000);
+             };
+             layer();
+            </script>
+
 
         <script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
         <script src="Developer/common-files/js/jquery-1.10.2.min.js"></script>
