Update Website - fix github and hyperlink logo

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <p> After that, I joined several studies with my former supervisor and colleagues</p>
                         <p>I focus on environmental policies’ causalities, which could determine a long-term impact.
                             I strive to study some questions like ‘whether the carbon payment can treat beneficiaries neutral?’.</p>
-                        <p>Find more about me in <a class="text-primary" href="/NhungLe_CV.pdf">my CV</a> </p>        
+                        <p>Find more about me in <a style="color:navy" href="/NhungLe_CV.pdf">my CV</a> </p>        
                     </div>
                     <div class="column side">
                         <div class="iframe-fixedwidth">
