Update 1st toc for blog post

--- a/Publications.html
+++ b/Publications.html
@@ -77,7 +77,7 @@
             <footer class="footer-3">
                 <p style="text-align: center; color: whitesmoke; font-style: oblique;"> Contact me via those links below:</p>
                     <div class="container footer-3">
-                        <div class="column-equal">
+                        <div class="row-style2">
                             <a href="https://www.linkedin.com/in/le-hong-nhung-85249666/" target="_blank">
                                 <img src="/img/Linkedin.png"  width="50%">
                             </a>
