--- a/Tutorials.html
+++ b/Tutorials.html
@@ -134,7 +134,7 @@
         <script>
         $(document).ready(function() {
             $.ajax({
-                url : "flowchart.txt",
+                url : "https://raw.githubusercontent.com/nhung168/NhungLe/gh-pages/flowchart.txt",
                 dataType : "text",
                 success : function(data) {
                     var chart = flowchart.parse(data);
