--- a/Tutorials.html
+++ b/Tutorials.html
@@ -126,11 +126,11 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="Developer/samples/sample-04/js/jquery.backgroundvideo.min.js"></script>
         <script src="Developer/samples/sample-04/js/script.js"></script>
-        <script src="http://flowchart.js.org/raphael-min.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="http://flowchart.js.org/flowchart-latest.js"></script>
-        <script src="http://flowchart.js.org/flowchart.min.js"></script>
-        <script src="http://flowchart.js.org/flowchart.js"></script>
+        <script src="script/raphael-min.js.js"></script>
+        <script src="script/jquery.min.js"></script>
+        <script src="script/flowchart-latest.js"></script>
+        <script src="script/flowchart.min.js"></script>
+        <script src="script/flowchart.js"></script>
         <script>
         $(document).ready(function() {
             $.ajax({
