--- a/Tutorials.html
+++ b/Tutorials.html
@@ -161,5 +161,13 @@
                 }
             });
         });
+        </script>
+        <script type="text/javascript">
+            $(document).ready(function () {
+            $("section").click(function () {
+            $("section").removeClass("highlight");
+            $(this).addClass("highlight");
+            });
+            });
         </script>    
     </html> 
