--- a/Tutorials.html
+++ b/Tutorials.html
@@ -57,22 +57,22 @@
                                             <br>Under the flowchart you could click on the colored blocks to redirect to my detailed outlines inluding my blog posts (tutorials, past experiences, sharing resources) for your interest. Or you can go direct to my outline under the flowchart
                                         </section>
                                         <div id="canvas"></div>
-                                        <section id="section1"><a style="font-size: 14pt;color:#03254c" href=#section1>Part 1: Data Collection</a></section>
-                                            <section id="section11"><a style="font-size: 14pt;color:#03254c" href=#section11>1.1 Find Data Resources</a></section>
-                                                <div><a style="font-size: 14pt;color: #03254c" href=”” target=”_blank”>1.1.1 Scraping Data</a></div>
-                                                <div><a style="font-size: 14pt;color:#03254c" href=”” target=”_blank”>1.1.2 Scraping data from text to tabular format</a></div>
-                                                <div><a style="font-size: 14pt;color:#03254c" href=”” target=”_blank”>1.1.3 My key notes for data resources in different subjects</a></div>
-                                            <section id="section12"><a style="font-size: 14pt;color:#03254c" href=#section12>1.2  Design method</a></section>
-                                                <div><div><a style="font-size: 14pt;color:#03254c" href=”” target=”_blank”>1.2.1 Learning from expert: Prof. Richard McElreath – Statistical Rethinking Lecture Series – my key notes</a></div>
-                                                <div><a style="font-size: 14pt;color:#03254c" href=”” target=”_blank”>1.2.2 Applying data management to project management</a></div>
-                                        <section id="section2"><a style="font-size: 14pt;color:#03254c" href=#section2>Part2: Data Wrangling & Processing</a></section></div>
-                                            <section id="section21"><a style="font-size: 14pt;color:#03254c" href=#section21>2.1 Compile multiple datasets – a concept of pivoting from wide to long</a></section>
-                                            <section id="section22"><a style="font-size: 14pt;color:#03254c" href=#section22>2.2 Identify data issues</a></section>
-                                                <div><a style="font-size: 14pt;color:#03254c" href=”” target=”_blank”>2.2.1 Using pre-analysis techniques to identify issues</a></div>
-                                                <div><a style="font-size: 14pt;color:#03254c" href=”” target=”_blank”>2.2.2 How to deal with data issues</a></div>
-                                        <section id="section3"><a style="font-size: 14pt;color:#03254c" href=#section3>Part3: Data Analytics & Modelling</a></section>
-                                            <div><a style="font-size: 14pt;color:#03254c" href=”” target=”_blank”>3.1 Create Dashboard, or Data Visualization – Some applications (R, Tableau)</a></div>
-                                            <div><a style="font-size: 14pt;color:#03254c" href=”” target=”_blank”>3.2 My key notes for Statistical Learning</a></div>
+                                        <section id="section1"><a style="font-size: 14pt;color:#03254c;" id="#section1">Part 1: Data Collection</a></section>
+                                            <section id="section1.1" ><a style="font-size: 14pt;color:#03254c;" id="#section1.1">1.1 Find Data Resources</a></section>
+                                                <div><a style="font-size: 14pt;color: #1167b1" href="" target="_blank">1.1.1 Scraping Data</a></div>
+                                                <div><a style="font-size: 14pt;color:#1167b1" href="" target="_blank">1.1.2 Scraping data from text to tabular format</a></div>
+                                                <div><a style="font-size: 14pt;color:#1167b1" href="" target="_blank">1.1.3 My key notes for data resources in different subjects</a></div>
+                                            <section id="section1.2"><a style="font-size: 14pt;color:#03254c" id="#section1.2">1.2  Design method</a></section>
+                                                <div><div><a style="font-size: 14pt;color:#1167b1" href="" target="_blank">1.2.1 Learning from expert: Prof. Richard McElreath – Statistical Rethinking Lecture Series – my key notes</a></div>
+                                                <div><a style="font-size: 14pt;color:#1167b1" href="" target="_blank">1.2.2 Applying data management to project management</a></div>
+                                        <section id="section2"><a style="font-size: 14pt;color:#03254c;font-weight: bold" id="#section2>Part 2: Data Wrangling & Processing</a></section></div>
+                                            <section id="section2.1"><a style="font-size: 14pt;color:#03254c" id="#section2.1">2.1 Compile multiple datasets – a concept of pivoting from wide to long</a></section>
+                                            <section id="section2.2"><a style="font-size: 14pt;color:#03254c" id="#section2.2">2.2 Identify data issues</a></section>
+                                                <div><a style="font-size: 14pt;color:#1167b1" href="" target="_blank">2.2.1 Using pre-analysis techniques to identify issues</a></div>
+                                                <div><a style="font-size: 14pt;color:#1167b1" href="" target="_blank">2.2.2 How to deal with data issues</a></div>
+                                        <section id="section3"><a style="font-size: 14pt;color:#03254c;font-weight: bold" id="#section3">Part3: Data Analytics & Modelling</a></section>
+                                            <div><a style="font-size: 14pt;color:#1167b1" href="" target="_blank">3.1 Create Dashboard, or Data Visualization – Some applications (R, Tableau)</a></div>
+                                            <div><a style="font-size: 14pt;color:#1167b1" href="" target="_blank">3.2 My key notes for Statistical Learning</a></div>
   
                                     </div>                                         
                             
@@ -123,7 +123,7 @@
         <script src="Developer/common-files/js/jquery.scrollTo-1.4.3.1-min.js"></script>
         <script src="Developer/common-files/js/jquery.parallax.min.js"></script>
         <script src="Developer/common-files/js/startup-kit.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="Developer/samples/sample-04/js/jquery.backgroundvideo.min.js"></script>
         <script src="Developer/samples/sample-04/js/script.js"></script>
         <script src="script/raphael-min.js.js"></script>
@@ -134,7 +134,7 @@
         <script>
         $(document).ready(function() {
             $.ajax({
-                url : "https://raw.githubusercontent.com/nhung168/NhungLe/gh-pages/flowchart.txt",
+                url : "flowchart.txt",
                 dataType : "text",
                 success : function(data) {
                     var chart = flowchart.parse(data);
@@ -162,14 +162,13 @@
             });
         });
         </script>
+        
         <script>
-            jQuery(function($) {
-                var path = window.location.href;
-                $('a').each(function() {    
-                if (this.href === path) {
-                $(this).addClass('highlight');
-                }
-                });
+            $("#canvas").click(function(){
+            var path =  window.location.href;
+            let text = path.length
+            let result = path.substring(35, text)
+            document.getElementById(result).classList.add('highlight')
             });
         </script>    
-    </html> 
+    </html>
