--- a/Tutorials.html
+++ b/Tutorials.html
@@ -68,7 +68,7 @@
                                 <!--flow chart-->
                             </div>
                                 
-                            <section id="section1"><a style="font-size: 14pt;color:#03254c;" id="#section1">Part 1: Data Collection</a>
+                            <section id="section1"><a style="font-size: 14pt;color:#03254c;font-weight: bold;" id="#section1">Part 1: Data Collection</a>
                             </section>
                                 <section id="section1.1" ><a style="font-size: 14pt;color:#03254c;" id="#section1.1">1.1 Find Data Resources</a>
                                 </section>
