Revert "Update Haze post from Data"
This reverts commit 2518c268c1c9e833c40799e242e433a5ccbe244f.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <!--main section-->
             <section">
             <div>
-                <div class="row-style2">
+                <div class="row">
                     <div class="column side">
                     </div>
                     <div class="column middle" style="padding: 50px">
@@ -65,7 +65,7 @@
                     </div>
                     <div class="column side">
                         <div class="iframe-fixedwidth">
-                            <iframe src="https://www.youtube.com/embed/8Og4mgCWjDU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe class ="reponsive-iframe" style="width: 560px; height:300px;" src="https://www.youtube.com/embed/8Og4mgCWjDU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div>
                   </div>                  
