--- a/Publications.html
+++ b/Publications.html
@@ -62,8 +62,7 @@
                             <a style="color: blue; font-style:oblique;" href="https://doi.org/10.4209/aaqr.210081">https://doi.org/10.4209/aaqr.210081 </a>
                         </p>
                         <p>
-                            Dieu-Anh, V, Hien, N.T.T., Ha, V.T.L., Le, N.H., Phan, N.H.T., Prapat, P., Vu, V.T., Ly, B.T.
-                            A Review Of Characteristics, Causes, And Formation Mechanisms of Haze In Southeast Asia
+                            Van, DA., Vu, T.V., Nguyen, TH.T. et al. A Review of Characteristics, Causes, and Formation Mechanisms of Haze in Southeast Asia. Curr Pollution Rep 8, 201–220 (2022). 
                             <a style="color: blue; font-style:oblique;" href="https://doi.org/10.1007/s40726-022-00220-z">https://doi.org/10.1007/s40726-022-00220-z </a>
                         </p>
 
