--- a/Publications/Post3-En.html
+++ b/Publications/Post3-En.html
@@ -24,17 +24,17 @@
                     <div class="navbar" role="navigation">
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle"></button>
-                            <a class="brand" href="https://nhungleh.com/index.html">NhungLe</a>
+                            <a class="brand" href="/index.html">NhungLe</a>
                          </div>
 	                        <div class="collapse navbar-collapse pull-right">
 	                            <ul class="nav pull-left">
-	                                <li class="active"><a href="https://nhungleh.com/index.html">Home</a></li>
-	                                <li class = "nav-visible"><a href="https://nhungleh.com/index.html">About</a></li>
-	                                <li><a href="https://nhungleh.com/Tools.html">Tools</a></li>
-	                                <li><a href="../../../Tutorials.html">Tutorials</a></li>
+	                                <li class="active"><a href="/index.html">Home</a></li>
+	                                <li class = "nav-visible"><a href="/index.html">About</a></li>
+	                                <li><a href="/Tools.html">Tools</a></li>
+                                    <li><a href="/Data.html">Data</a></li>
+	                                <li><a href="/Tutorials.html">Tutorials</a></li>
 	                            </ul>
 	                            <form class="navbar-form pull-right">
-	                                <a class="btn btn-info" href="https://nhungleh.com/VI/Tools/Post3-Vi.html">VIE</a>
 	                            </form>
                         	</div>
                     </div>
