--- a/Tools/Post3-En.html
+++ b/Tools/Post3-En.html
@@ -30,10 +30,10 @@
                             <div class="collapse navbar-collapse pull-right">
                                 <ul class="nav pull-left">
                                     <li class="active"><a href="index.html">About</a></li>
-	                                <li class = "nav-visible"><a href="https://nhungleh.com/Tools/">Solutions</a></li>
-	                                <li><a href="/https://nhungleh.com/Data.html">Data</a></li>
-                                    <li><a href="https://nhungleh.com/Publications.html">Publications</a></li>
-                                    <li><a href="https://nhungleh.com/Tutorials.html">Blog</a></li>
+	                                <li class = "nav-visible"><a href="/Tools.html">Solutions</a></li>
+	                                <li><a href="/Data.html">Data</a></li>
+                                    <li><a href="/Publications.html">Publications</a></li>
+                                    <li><a href="/Tutorials.html">Blog</a></li>
                                 </ul>
                                 <form class="navbar-form pull-right">
                                     <a class="btn btn-info" href="https://nhungleh.com/Data-VI.html">VIE</a>
