--- a/Data.html
+++ b/Data.html
@@ -88,11 +88,11 @@
                     <div class="awesome-card paper-card">    
                         <div class="card-content">
                             <div class="paper-container">
-                                <a class="layer1" href="/Data/Post4-En.html" target="_blank">
+                                <a class="layer1" href="/Data/Haze_SEA_review.html" target="_blank">
                                     <img src="/img/PM25.png">
                                 </a>
                                 <div class="layer2 layer2-onload">
-                                    <h6 style="text-align: center;"><a href="/Data/Post4-En.html" target="_blank">Assessing Regional Haze issue in South East Asia
+                                    <h6 style="text-align: center;"><a href="/Data/Haze_SEA_review.html" target="_blank">Assessing Regional Haze issue in South East Asia
                                     </a></h6>
                                     <p class="description">The purpose of the script is to investigate the Paticulate matter (PM2.5) concentration changes by observing the meteorology variables for 5 years (2016 - 2021)
                                     </p>
